samples/_failures_safe/1761801688_414f4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f36c9b86.c: In function ‘main’:
./samples/SAFE/__tmp_f36c9b86.c:150:31: error: missing terminating " character
  150 |         print_matrix(&result, "
      |                               ^
./samples/SAFE/__tmp_f36c9b86.c:150:9: error: expected expression at end of input
  150 |         print_matrix(&result, "
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_f36c9b86.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f36c9b86.c:150:9: error: expected declaration or statement at end of input
